--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ Spark/Spark_Manipal/Scala
 Spark/Spark_Manipal/Exercises/
 Spark/Spark_Manipal/Scala-SparkMLLIB-master/
 Spark/Spark_Manipal/sparkstreaming/
+deep-learning 
 
 #History files
 .Rhistory
